Fixed CSS spacing on Releases page so the scroll up button won't hover over release content

--- a/src/containers/Layout/index.css
+++ b/src/containers/Layout/index.css
@@ -127,6 +127,10 @@
     width: 100%;
   }
 
+  #releases {
+    width: auto;
+  }
+
   #footer {
     display: flex;
     flex-direction: column;
